﻿更新履歴

==== Ver 1.1.7-beta1(201x/xx/xx)
 * NEW: ダイレクトメッセージに添付された画像のサムネイル表示に対応
 * FIX: 設定ファイルの保存時に Setting*.xml.tmp ファイルが残ったまま設定が保存できなくなる問題の修正

==== Ver 1.1.6(2013/12/12)
 * UriFormatException のエラーが多数報告されたため修正版をリリースしました

 * CHG: 発言一覧等に使用するフォントのデフォルトが誤って変更されていた問題を修正
 * FIX: 不正なURLを含むツイートを受信するとエラーが発生する問題を修正
 * FIX: 短い名前のタブの幅が極端に狭く表示されてしまう問題を修正

==== Ver 1.1.5(2013/12/12)
 * NEW: ディスプレイのDPI設定に応じて適切にスケーリングが行われます
 * NEW: OpenTween派生クライアントなどから設定ファイルをコピーした場合に、存在しない設定を削除せず保持するようになります
 * NEW: タブやボタン等のUIに任意のフォントを指定できます
   - フォントによっては一部レイアウトが崩れるため隠し設定にしています
   - SettingLocal.xml に <FontUIGlobalStr>Meiryo UI, 9pt</FontUIGlobalStr> のように記述することで使えます
   - 「メイリオ」のように日本語のフォント名を指定する場合は UTF-8 で保存するのを忘れずに
 * NEW: 起動オプション /configDir:<dirpath> を使用して設定ファイルの参照先を変更できるようになります
   - 別々の設定ファイルを使用するプロセスであれば複数のOpenTweenを同時起動することが可能です
 * NEW: Imgur への画像投稿（匿名アップロードのみ）に対応しました
 * CHG: PublicSearchタブ内のツイートのメニューでも「返信元ステータスを開く」が使用できるよう修正 (thx @5px!)
 * CHG: 発言詳細欄内のリンクのツールチップに、デコードされた状態のURLが表示されるようになります
 * FIX: 取得したプロフィール画像が壊れていた場合のエラー処理を改善 (thx @7mencho!)
 * FIX: サムネイル情報の取得に失敗した場合のエラー処理を改善
 * FIX: 設定ファイルの保存に失敗すると設定ファイルが空になる問題を修正
 * FIX: 複数ツイートを選択した状態での「コピー（ステータスURL）」が改行区切りとなるように修正 (thx @5px!)

==== Ver 1.1.4(2013/10/19)
 * CHG: タブ振り分けルールでのスクリーン名に対するヒット条件が、「複合条件」では完全一致、「単一条件」では部分一致となっていたため完全一致に統一
 * FIX: 取得したプロフィール画像が壊れていた場合にOpenTweenが異常終了してしまう問題の修正 (thx @5px, @selvaggio!)
 * FIX: 取得した画像が壊れていた場合にメモリリークを起こす可能性のある箇所の修正 (thx @5px!)
 * FIX: タブ振り分けルールの「単一条件」が公式RTした人のスクリーン名に対してヒットしない問題の修正 (thx @Shoichi_Kublai!)

==== Ver 1.1.3(2013/10/11)
 * タブ振り分けルールの挙動が若干変わりました
 * 基本的には Tween の Wiki に記載されている挙動に忠実にしたものですが、一部利用者には影響があるかもしれません
 * http://sourceforge.jp/projects/tween/wiki/%E3%82%BF%E3%83%96%E6%8C%AF%E3%82%8A%E5%88%86%E3%81%91%E3%83%AB%E3%83%BC%E3%83%AB

 * CHG: Twitter API のエラー処理を改善
 * CHG: 旧 API v1 関連の機能を削除
 * CHG: タブ振り分けルールの処理を改善
   - 除外ルールが単独で指定された場合 (マッチルールが空欄) でなくても除外ルールがタブ全体への例外指定として作用してしまう挙動を修正
   - (正規表現無効時) 除外ルールの「発言内容」を半角スペース区切りで複数指定したときに AND 条件ではなく OR 条件として判定してしまう挙動を修正