@@ -119,7 +119,7 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="TwitterAPIText.Location" type="System.Drawing.Point, System.Drawing">
-    <value>267, 100</value>
+    <value>267, 75</value>
   </data>
   <data name="TwitterAPIText.Size" type="System.Drawing.Size, System.Drawing">
     <value>125, 19</value>
@@ -154,7 +154,7 @@
     <value>NoControl</value>
   </data>
   <data name="Label8.Location" type="System.Drawing.Point, System.Drawing">
-    <value>23, 103</value>
+    <value>23, 78</value>
   </data>
   <data name="Label8.Size" type="System.Drawing.Size, System.Drawing">
     <value>174, 12</value>
@@ -179,36 +179,6 @@
   </data>
   <data name="&gt;&gt;Label8.ZOrder" xml:space="preserve">
     <value>1</value>
-  </data>
-  <data name="CheckUseSsl.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="CheckUseSsl.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="CheckUseSsl.Location" type="System.Drawing.Point, System.Drawing">
-    <value>23, 76</value>
-  </data>
-  <data name="CheckUseSsl.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 16</value>
-  </data>
-  <data name="CheckUseSsl.TabIndex" type="System.Int32, mscorlib">
-    <value>9</value>
-  </data>
-  <data name="CheckUseSsl.Text" xml:space="preserve">
-    <value>通信にHTTPSを使用する</value>
-  </data>
-  <data name="&gt;&gt;CheckUseSsl.Name" xml:space="preserve">
-    <value>CheckUseSsl</value>
-  </data>
-  <data name="&gt;&gt;CheckUseSsl.Type" xml:space="preserve">
-    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;CheckUseSsl.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;CheckUseSsl.ZOrder" xml:space="preserve">
-    <value>2</value>
   </data>
   <data name="Label64.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -238,7 +208,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;Label64.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>2</value>
   </data>
   <data name="ConnectionTimeOut.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>Disable</value>
@@ -262,7 +232,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ConnectionTimeOut.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>3</value>
   </data>
   <data name="Label63.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -292,7 +262,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;Label63.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>4</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
