@@ -121,9 +121,6 @@
   <data name="CheckUseSsl.Size" type="System.Drawing.Size, System.Drawing">
     <value>108, 16</value>
   </data>
-  <data name="CheckUseSsl.Text" xml:space="preserve">
-    <value>使用HTTPS通信</value>
-  </data>
   <data name="Label64.Size" type="System.Drawing.Size, System.Drawing">
     <value>309, 12</value>
   </data>
