@@ -749,7 +749,6 @@ namespace OpenTween
             SettingDialog.ReadOwnPost = _cfgCommon.ReadOwnPost;
             SettingDialog.GetFav = _cfgCommon.GetFav;
             SettingDialog.ReadOldPosts = _cfgCommon.ReadOldPosts;
-            SettingDialog.UseSsl = _cfgCommon.UseSsl;
             SettingDialog.BitlyUser = _cfgCommon.BilyUser;
             SettingDialog.BitlyPwd = _cfgCommon.BitlyPwd;
             SettingDialog.ShowGrid = _cfgCommon.ShowGrid;
@@ -964,7 +963,6 @@ namespace OpenTween
 
             tw.RestrictFavCheck = SettingDialog.RestrictFavCheck;
             tw.ReadOwnPost = SettingDialog.ReadOwnPost;
-            tw.UseSsl = SettingDialog.UseSsl;
             ShortUrl.IsResolve = SettingDialog.TinyUrlResolve;
             ShortUrl.BitlyId = SettingDialog.BitlyUser;
             ShortUrl.BitlyKey = SettingDialog.BitlyPwd;
@@ -3895,7 +3893,6 @@ namespace OpenTween
                     tw.TinyUrlResolve = SettingDialog.TinyUrlResolve;
                     tw.RestrictFavCheck = SettingDialog.RestrictFavCheck;
                     tw.ReadOwnPost = SettingDialog.ReadOwnPost;
-                    tw.UseSsl = SettingDialog.UseSsl;
                     ShortUrl.IsResolve = SettingDialog.TinyUrlResolve;
                     ShortUrl.BitlyId = SettingDialog.BitlyUser;
                     ShortUrl.BitlyKey = SettingDialog.BitlyPwd;
@@ -7798,7 +7795,6 @@ namespace OpenTween
                     _cfgCommon.WideSpaceConvert = this.IdeographicSpaceToSpaceToolStripMenuItem.Checked;
                 }
                 _cfgCommon.ReadOldPosts = SettingDialog.ReadOldPosts;
-                _cfgCommon.UseSsl = SettingDialog.UseSsl;
                 _cfgCommon.BilyUser = SettingDialog.BitlyUser;
                 _cfgCommon.BitlyPwd = SettingDialog.BitlyPwd;
                 _cfgCommon.ShowGrid = SettingDialog.ShowGrid;
