@@ -2,6 +2,8 @@
 
 ==== Ver 1.1.7-beta1(201x/xx/xx)
  * NEW: ダイレクトメッセージに添付された画像のサムネイル表示に対応
+ * CHG: 「通信にHTTPSを使用する」の設定項目を削除
+   - Twitter APIへの接続にSSLが必須となったため、常にHTTPSを使用して通信します
  * FIX: 設定ファイルの保存時に Setting*.xml.tmp ファイルが残ったまま設定が保存できなくなる問題の修正
 
 ==== Ver 1.1.6(2013/12/12)
